<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上敬文</string>
    <string name="usernameHint">用户名</string>
    <string name="passwordHint">密码</string>
    <string name="repeatPasswordHint">重复密码</string>
    <string name="nameHint">姓名</string>
    <string name="studentIDHint">学号</string>
    <string name="emailHint">电子邮箱</string>
    <string name="phoneHint">移动电话</string>
    <string name="login">登陆</string>
    <string name="register">注册新用户</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="noneUser">没有帐号？查看新闻。</string>
    <string name="title_activity_main">掌上敬文</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">注册新用户</string>
    <string name="title_activity_forget_password">忘记密码</string>
    <string name="title_activity_tour">书院新闻</string>
    <string name="title_activity_news_item">书院新闻</string>
    <string name="action_share">分享</string>
    <string name="hello_world">Hello world!</string>
    <string name="notice">通知发文</string>
    <string name="problems">你问我答</string>
    <string name="more">更多</string>
    <string name="more_news">书院新闻</string>
    <string name="more_contact">通讯录</string>
    <string name="more_setting">个性设置</string>
    <string name="more_profile">个人资料</string>
    <string name="more_logout">退出登陆</string>
    <string name="title_activity_contact">通讯录</string>
    <string name="title_activity_contact_item">通讯录</string>
    <string name="contact_export">导出联系人</string>
    <string name="action_problem_add">添加问题</string>
    <string name="action_notice_add">新建发文</string>
    <string name="title_activity_profile">个人资料</string>
    <string name="title_activity_setting">个性设置</string>
    <string name="reset_password">修改密码</string>
    <string name="profile_name_hint">真实姓名</string>
    <string name="title_activity_change_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="sync_local_phone_number">同步本机号码</string>
    <string name="profile_phone_hint">联系方式（单击图标同步本机号码）</string>
    <string name="title_activity_add_problem">发布问题</string>
    <string name="finish">完成</string>
    <string name="problem_title">问题标题</string>
    <string name="problem_description">问题描述</string>
    <string name="add_image">添加图片</string>
    <string name="title_activity_image_display">图片展示</string>
    <string name="title_activity_problem_item">查看问题</string>
    <string name="add_solution">添加回答</string>
    <string name="title_activity_add_comment">添加回答</string>
    <string name="save">保存更改</string>
    <string name="title_activity_comment_item">查看回答</string>
    <string name="title_activity_select_member">选择联系人</string>
    <string name="title_activity_draft">编辑通知</string>
    <string name="send_notice">发送通知</string>
    <string name="title_activity_notice_item">查看通知</string>
    <string name="delay">延期</string>
    <string name="notice_finish">完成</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="less_mode">省流量模式</string>
    <string name="comment_description">回答内容</string>

</resources>
