<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/oldPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="@dimen/input_padding"
            android:layout_margin="@dimen/input_margin"
            android:inputType="textPassword"
            android:hint="@string/old_password"/>

        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="@dimen/input_padding"
            android:layout_margin="@dimen/input_margin"
            android:inputType="textPassword"
            android:hint="@string/new_password"/>

        <EditText
            android:id="@+id/repeatNewPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="@dimen/input_padding"
            android:layout_margin="@dimen/input_margin"
            android:inputType="textPassword"
            android:hint="@string/new_password"/>

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="@dimen/input_padding"
            android:layout_margin="@dimen/input_margin"
            android:text="@string/reset_password"
            android:background="@color/primaryColor"
            android:textColor="@android:color/white" />

        </LinearLayout>

</LinearLayout>
