<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/gravatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:padding="9dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:background="@drawable/profile_gravatar_bg"/>

            </RelativeLayout>

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_hint"
            android:textColor="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="@dimen/input_padding"
            android:layout_margin="@dimen/input_margin" />

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone_hint"
            android:textColor="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:padding="@dimen/input_padding"
                android:layout_margin="@dimen/input_margin"
                android:inputType="phone"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/syncImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sync_phone_number"
                android:contentDescription="@string/sync_local_phone_number"
                android:layout_gravity="center_vertical"/>

            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margin"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            android:background="@color/primaryColor"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margin"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:background="@color/primaryColor"/>

        </LinearLayout>

</LinearLayout>