<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jw.iii.pocketjw.Activity.LoginActivity"
    android:background="#ED7A63"
    android:gravity="center"
    android:orientation="vertical">

    <com.jw.iii.pocketjw.UI.CircularImage
        android:id="@+id/default_avatar"
        android:layout_width="144dip"
        android:layout_height="144dip" />


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/username"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:inputType="text"
                android:hint="@string/usernameHint"
                android:background="#FBFCFC"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:inputType="textPassword"
                android:hint="@string/passwordHint"
                android:background="#FBFCFC"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="20sp"
            android:text="@string/login"
            android:background="@android:color/white"
            android:layout_below="@id/loginLayout"
            android:textColor="#ED7A63"/>
    </RelativeLayout>

</LinearLayout>
